mullvad-daemon/src/migrations/multihop/snapshots/mullvad_daemon__migrations__multihop__test__scenario_7b-2.snap
---
source: mullvad-daemon/src/migrations/multihop/mod.rs
expression: "serde_json::to_string_pretty(&settings)?"
---
{
  "relay_settings": {
    "normal": {
      "location": "any",
      "ownership": {
        "only": "MullvadOwned"
      },
      "providers": {
        "only": [
          "31337"
        ]
      },
      "wireguard_constraints": {
        "allowed_ips": "any",
        "entry_location": "any",
        "entry_ownership": {
          "only": "MullvadOwned"
        },
        "entry_providers": {
          "only": [
            "31337"
          ]
        },
        "ip_version": "any",
        "multihop": "always"
      }
    }
  },
  "tunnel_options": {
    "wireguard": {
      "daita": true,
      "mtu": null,
      "quantum_resistant": null,
      "rotation_interval": null
    }
  }
}
